feat: dapp 컴포넌트 구현

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,6 +3,7 @@
   "dapp_favorite_delete": "Delete",
   "dapp_favorite_delete_confirm": "Are you sure you want to delete this site from your favorites?",
   "dapp_list_title": "List",
+  "dapp_description": "Description",
   "go_to_dapp": "Go",
   "button_cancel": "Cancel",
   "button_confirm": "Confirm",
