feat: 즐겨찾기 리스트 및 기능 구현

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -7,5 +7,6 @@
   "go_to_dapp": "Go",
   "button_cancel": "Cancel",
   "button_confirm": "Confirm",
-  "search": "Search or enter URL"
+  "search": "Search or enter URL",
+  "empty_data": "Empty data."
 }
