feat: 검색 기능 추가

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -7,6 +7,6 @@
   "go_to_dapp": "Go",
   "button_cancel": "Cancel",
   "button_confirm": "Confirm",
-  "search": "Search or enter URL",
+  "search": "Search dapps.",
   "empty_data": "Empty data."
 }
